fix: fix header z-index

--- a/app/src/components/menu.css
+++ b/app/src/components/menu.css
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 670px) {
-  div {
+  header div {
     display: none;
   }
 }
